FIxing styling issues on mobile grid.

--- a/src/assets/globalStyles.scss
+++ b/src/assets/globalStyles.scss
@@ -61,6 +61,14 @@ html {
     padding-right: 0.5rem;
 }
 
+@media screen and (max-width: 415px) {
+
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
+
 @media screen and (min-width: 1024px) {
 
     .grid {
